# AI_insurance_consultant

./: MEMORY.md  glama.json
docs/: privacy-policy.md
knowledge/SOP/2026-04-03/: 合规审核SOP更新版.md  私域转化话术框架.md
knowledge/sales-skills/mcp/: .agents.md  AGENTIC-WORKFLOW-DESIGN-R26.md  CHANGELOG.md  DIFY_CLAUDE_OPUS_EMAIL_TEMPLATES_FINAL.md  Dockerfile-mcp  Dockerfile-mcp-verification.md  EU-AI-ACT-ART50-BANNERS.md  LANGCHAIN-INTEGRATION-DRAFT.py  LANGCHAIN-INTEGRATION.md  LICENSE  OPENAPI.json  PRIVACY_POLICY_EU-AI-ACT.md  R103-PROGRESS.md  R106-PROGRESS.md  R26-PROGRESS.md  R27-PROGRESS.md  R29-DIFY-INTEGRATION-PLAN.md  R29-PROGRESS.md  R30-CURL-TEST-LOG.md  R30-DIFY-MCP-PLUGIN-MANIFEST.json  R30-PROGRESS.md  R31-PLATFORM-GOING-OUTSIDE.md  R31-PROGRESS.md  R32-PROGRESS.md  R33-GL34-TOOL-SPEC.md  R33-N8N-INTEGRATION.md  R33-PROGRESS.md  R34-DISCORD-SLACK-GEMINI-INTEGRATION.md  R34-SUMMARY.md  R36-PROGRESS.md  R37-PROGRESS.md  R38-PLATFORM-FEASIBILITY.md  R38-PROGRESS.md  R39-PROGRESS.md  R39-SUMMARY.md  R40-PROGRESS.md  R40-THREE-DIMENSIONS.md  R41-CLAUDE-MCPB-AND-MCPSO-SUBMISSION.md  R41-SUMMARY.md  R42-PROGRESS.md  (+47 more)
knowledge/sales-skills/mcp/.well-known/mcp/: server-card.json
knowledge/sales-skills/mcp/specs/: mcp-tools.json
knowledge/sales-skills/mcp/src/: __init__.py  server.py  server_http.py  server_http_v2.py
knowledge/sales-skills/mcp/src/tools/: client_crm_tag.py  compliance_check.py  compliance_rewrite.py  compliance_trend_analysis.py  gl34_compliance_check.py  lifecycle_analyzer.py  needs_assessment.py  objection_handler.py  private_sop_runner.py  product_query.py
knowledge/行业知识/2026-04-03/: sessions_send通信机制实际行为.md  政策数据表述规范.md
memory/: 2026-06-21-r111.md  2026-06-21.md  2026-06-25-cron-sales.md  QC-REPORT-2026-06-21-06.md  R111-PROGRESS.md  知识库.md
projects/insurance-mcp-platform/: R103-PROGRESS.md
