[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "insurance-sales-mcp"
version = "1.0.0"
description = "香港保险咨询销售 MCP Server — GL-44/RL-010合规 | 11 tools: product query, compliance check, needs assessment, objection handler, private SOP runner, compliance rewrite, lifecycle analyzer, CRM tag, multi-turn dialogue, trend analysis, GL34 compliance"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
authors = [
    {name = "Insurance Tech Team"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial :: Investment",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Model Context Protocol :: MCP Server",
    "Insurance :: Hong Kong Insurance Authority GL-44 Compliant",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27", "coverage"]
cli = ["click>=8.0", "rich>=13.0"]

[project.scripts]
insurance-mcp = "knowledge.sales_skills.mcp.server:main_stdio_loop"
